client/src/Card.css
.card {
  position: relative;
  cursor: pointer;
  overflow-y: scroll;
  overflow-x: hidden;
  background: #fff;
  box-shadow: 5px 5px 5px #e0e0e0;
  border-radius: 8px;
}

.card:hover {
  background: #fafafa;
}

@media only screen and (max-width: 480px) {
  .card {
    margin: 5px 0;
    width: 100%;
  }
}

@media only screen and (min-width: 480px) {
  .card {
    margin: 10px;
    width: 320px;
  }
}

.card .img {
  width: 100%;
  height: 225px;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  background-color: #e0e0e0;
}

.title,
.title-with-img {
  font-weight: 700;
  font-family: 'nyt-franklin', 'Roboto', 'Helvetica Neue', garamond, helvetica, sans serif;
  margin: 10px 20px;
}

.title {
  font-size: 32px;
  margin-bottom: 20px;
}
.title-with-img {
  font-size: 24px;
}

.desc {
  margin: 10px 20px;
  font-size: 20px;
  line-height: 1.2em;
  max-height: 155px;
  overflow-y: hidden;
  background: linear-gradient(#000, #fff);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.publisher {
  margin: 15px 20px 0 20px;
  font-size: 16px;
  vertical-align: middle;
}
.icon {
  height: 16px;
  border-radius: 8px;
  vertical-align: middle;
  margin-right: 10px;
  font-weight: 200;
}
.publisher-text {
  display: inline-block;
  vertical-align: middle;
  color: #757575;
}

.card-footer {
  margin: 15px 20px;
  font-size: 15px;
  vertical-align: middle;
  color: #9e9e9e;
}

.card-footer a:hover {
  text-decoration: underline;
  color: #ff6600;
}

.card:hover .card-footer {
  display: block;
  color: #757575;
}

.dot {
  display: inline-block;
  margin: 0 6px;
  font-size: 6px;
  font-weight: 200;
  vertical-align: middle;
}

